k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: gitops-app
  ports:
    - port: 80
      targetPort: 8080
